3.1
Now using /bin/cp instead of cp.

3.0
Little trick to have a pymv

2.2
Skips existing files instead of canceling whole operation
Implementing -o,--overwrite option.

2.1
Able to copy multiple files:
pycp bar foo /path/to/baz

2.0
Now able to copy recursively files!

1.3
Add an ETA and file speed estimation

1.2
Fix possible division by zero
Fix possible race condition

1.1
Add a proper license

1.0
Initial commit